# OpenCVSubtitlePlayer

./: CMakeLists.txt  README.md  test.srt
include/app/: PlayerApp.hpp
include/render/: RenderStyle.hpp  SubtitleRenderer.hpp
include/subs/: SrtParser.hpp  SubtitleCue.hpp  SubtitleTimingController.hpp  SubtitleTrack.hpp
include/video/: VideoSource.hpp
src/: main.cpp
src/app/: PlayerApp.cpp
src/render/: SubtitleRenderer.cpp
src/subs/: SrtParser.cpp  SubtitleTrack.cpp
src/video/: VideoSource.cpp
